// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LastUpdated renders the LastUpdated component 1`] = `
<Fragment>
  <BodyText
    style={Object {}}
  >
    Last updated today at 8:43 am
  </BodyText>
</Fragment>
`;

exports[`LastUpdated renders the LastUpdated component loading 1`] = `
<BodyText
  style={Object {}}
>
  Loading...
</BodyText>
`;

exports[`LastUpdated shows error when studyspace info is stale 1`] = `
<Fragment>
  <ErrorText
    containerStyle={
      Object {
        "marginBottom": 10,
      }
    }
    style={Object {}}
  >
    Our studyspace data is stale. Sorry about that. We're working on getting this fixed as quickly as possible.
  </ErrorText>
  <BodyText
    style={Object {}}
  >
    Last updated today at 8:41 am
  </BodyText>
</Fragment>
`;
